# axum-file-upload

./: Cargo.toml
src/: main.rs
src/routes/: user_routes.rs
