[package]
name = "download_files_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.38.0", features = ["full"] }
uuid = {version = "1.8.0", features = ["v4"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
fast_image_resize = "4.0.0"
image = "0.25.1"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
